force-app/src/objects/c2g__codaPageNumProperty__c.object
<CustomObject>
    <description>Stores a part of the formats saved from Certinia Print Formatter.</description>
    <fields>
        <fullName>c2g__CurrentPageNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CurrentPageNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__LastPageNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LastPageNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TextAfter__c</fullName>
        <label>TextAfter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TextBefore__c</fullName>
        <label>TextBefore</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TextBetween__c</fullName>
        <label>TextBetween</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Page Num Property</label>
    <nameField>
        <label>Page Number Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Num Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>